# RAG-AI-Researcher

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
cache_db/semantic_cache.lance/_transactions/: 0-ba770cb6-5f93-44d5-9653-0ff6858f2348.txn  1-6f0b7165-d02d-462e-b888-b2fe92102231.txn  2-f49361a9-4407-4923-8cc7-5f738ee0ec3a.txn
src/research_assistant/: config.py  graph_builder.py
src/research_assistant/agents/: LLM_critic_agent.py  arxiv_agent.py  tavily_search_agent.py  wikipedia_agent.py
src/research_assistant/core/: global_state.py  logger.py  state_manager.py
src/research_assistant/graph_nodes/: critic_node.py  execution_node.py  fusion_node.py  llm_synthesis_node.py  planning_node.py  rag_node.py  reasoning_node.py
src/research_assistant/guardrails/: guardrails_patterns.py  guardrails_validator.py  harmful_keywords_validator.py
src/research_assistant/prompt_library/: critic_prompt.py  planning_prompt.py  prompts.py  reasoning_prompt.py
src/research_assistant/routers/: chat_router.py
src/research_assistant/schemas/: arxiv.py  planning_model.py  reasoning_model.py  research_model.py  wikipedia.py
src/research_assistant/utils/: agentic_research.py  cached_models.py  llm_client.py  query_analyser.py  rag_pipeline.py
