[project]
name = "llm-002-agentic-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.1",
    "colorlog>=6.10.1",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.3",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.7.13",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
